base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoops-ai
spec:
  replicas: 0
  selector:
    matchLabels:
      app: autoops-ai
  template:
    metadata:
      labels:
        app: autoops-ai
    spec:
      containers:
        - name: autoops-ai
          image: mdsaad360/autoops-ai:32c53b2b69d0f4f74034e18bc5b9e89b4477d0d2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          # The preStop hook adds a delay to allow active connections to drain before the container is terminated.
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
      terminationGracePeriodSeconds: 30
