base/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoops-ai-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: autoops-ai
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
